# cicd-ai-review

./: .dockerignore  .gitignore  Dockerfile  PROMPT_EXPERIMENTS.md  README.md  diff.txt  docker-compose.prod.yml  docker-compose.yml  prometheus.yml  pyproject.toml  temp.txt  tracking_schema.md
.github/workflows/: ci.yml  terraform.yml  test-secret.yml
ansible/: setup.yml
grafana/: dashboard.json
src/: experiment.py  helper.py  main.py  promote_prompt.py  review.py
terraform/: .gitignore  droplet.tf  firewall.tf  main.tf  outputs.tf  variables.tf
tests/: test_helper.py  test_main.py  test_mlflow.py
text/: diff.txt  review.md  system_prompt.md
