[project]
name = "cicd-ai-review"
version = "0.1.0"
description = "Build CICD Pipeline for AI Code Review"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "uvicorn>=0.49.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
